--- a/w6-d3-async-redux-stories-saga/package.json
+++ b/w6-d3-async-redux-stories-saga/package.json
@@ -33,23 +33,22 @@
     ]
   },
   "dependencies": {
-    "@babel/plugin-transform-runtime": "^7.9.0",
-    "@babel/runtime": "^7.9.2",
-    "babel-preset-jest": "^25.2.1",
-    "core-js": "^3.6.4",
-    "enzyme-to-json": "^3.4.4",
-    "express": "^4.17.1",
-    "moment": "^2.24.0",
-    "redux-saga": "^1.1.3",
     "@babel/core": "^7.9.0",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-proposal-object-rest-spread": "^7.9.0",
+    "@babel/plugin-transform-runtime": "^7.9.0",
     "@babel/preset-env": "^7.9.0",
     "@babel/preset-react": "^7.9.4",
+    "@babel/runtime": "^7.9.2",
     "babel-loader": "^8.1.0",
+    "babel-preset-jest": "^25.2.1",
+    "core-js": "^3.6.4",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
+    "enzyme-to-json": "^3.4.4",
+    "express": "^4.17.1",
     "jest": "^25.2.3",
+    "moment": "^2.24.0",
     "nock": "^12.0.3",
     "nodemon": "^2.0.2",
     "npm-run-all": "^4.1.5",
@@ -57,6 +56,8 @@
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
+    "redux-saga-test-plan": "^4.0.0-rc.3",
     "superagent": "^5.2.2",
     "supertest": "^4.0.2",
     "webpack": "^4.42.1",
