--- a/w6-d3-async-redux-stories/package.json
+++ b/w6-d3-async-redux-stories/package.json
@@ -28,7 +28,8 @@
     ]
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "moment": "^2.24.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
